# A2UI

./: a2ui-claude-bridge.plugin
research/: claude-a2ui-decomposition.json
samples/agent/local_llm/: README.md  a2ui_pipeline.py  pyproject.toml  server.py  session.py
samples/agent/local_llm/client/: app.ts  client.ts  index.html  package.json  tsconfig.json  vite.config.ts
samples/agent/local_llm/examples/: contact_card.json  info_list.json
samples/agent/local_llm/providers/: __init__.py  base.py  gemini.py  local.py
